err/yast.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jieba'...
Listing './lib/python3.5/site-packages/jieba/analyse'...
Listing './lib/python3.5/site-packages/jieba/finalseg'...
Listing './lib/python3.5/site-packages/jieba/posseg'...
Listing './lib/python3.5/site-packages/jieba-0.39.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yast'...
Compiling './lib/python3.5/site-packages/yast/converter.py'...
***   File "./lib/python3.5/site-packages/yast/converter.py", line 58
    print "stop did!"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/yast/grid.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (grid.py, line 211)
Listing './lib/python3.5/site-packages/yast/learner'...
Listing './lib/python3.5/site-packages/yast/learner/liblinear'...
Listing './lib/python3.5/site-packages/yast/learner/liblinear/python'...
Listing './lib/python3.5/site-packages/yast-0.3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
